# github-star-mcp

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  config.yaml.example  pyproject.toml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/api/: chat.ts  config.ts  groups.ts  health.ts  sync.ts
frontend/src/components/: ActionButtons.tsx  MCPInfo.tsx  SyncStatus.tsx  VectorStatus.tsx
frontend/src/components/chat/: ChatInput.tsx  MessageBubble.tsx  MessageList.tsx
frontend/src/components/layout/: Sidebar.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  progress.tsx
frontend/src/hooks/: usePolling.ts  useTheme.ts
frontend/src/pages/: ChatPage.tsx  DiscoverPage.tsx  GroupsPage.tsx  SettingsPage.tsx
frontend/src/types/: index.ts
src/github_star_mcp/: __init__.py  config.py  embedder.py  gitea_client.py  github_client.py  main.py  rag.py  storage.py  tools.py  vector_store.py  web_app.py
src/github_star_mcp/agent/: __init__.py  chat.py  intent_parser.py  prompts.py  tools.py
src/github_star_mcp/groups/: __init__.py  models.py  service.py
src/github_star_mcp/health/: __init__.py  checker.py
src/github_star_mcp/settings/: __init__.py  handler.py  schema.py
src/github_star_mcp/templates/: index.html
tests/: test_main.py
